--- a/src/assets/languages/es.json
+++ b/src/assets/languages/es.json
@@ -150,7 +150,7 @@
     "cta": "Obtén una Demo Gratis"
   },
  "comparisonTable": {
-    "title": "¡Descubre Por Qué Somos los Mejores!",
+    "title": "¡Descubre por qué somos los mejores!",
     "titleheader": "Tabla Comparativa",
     "headers": [
       "Característica",
